@@ -1,13 +1,14 @@
 package com.marcosavard.commons.geog;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class CurrencyZoneDemo {
 
     public static void main(String[] args) {
         List<Currency> currencies = Currency.getAvailableCurrencies().stream()
                 .sorted(Comparator.comparing(Currency::getCurrencyCode))
-                .toList();
+                .collect(Collectors.toList());
 
         Map<Currency, List<Locale>> currencyZones = CurrencyZone.getZones();
         Locale locale = Locale.FRENCH;
